--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Connor McCarthy <mccarthy.connor.james@gmail.com>"]
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0"
 ipython = "^7.19.0"
+pytest = "^6.2.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
