--- a/.github/workflows/pythoncicd.yml
+++ b/.github/workflows/pythoncicd.yml
@@ -15,6 +15,7 @@ jobs:
         python-version: 3.7.9
     - name: Install dependencies
       run: |
+        pip install --upgrade pip
         pip install .
     - name: Lint with flake8
       run: |
