--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ name = "algorithms-specialization-stanford"
 version = "0.0.1"
 description = "Stanford's Algorithms Specialization courses."
 authors = ["Connor McCarthy <mccarthy.connor.james@gmail.com>"]
+packages = [
+    { include = "src" }
+]
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0"
