--- a/.github/workflows/pythoncicd.yml
+++ b/.github/workflows/pythoncicd.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install .
+        pip install poetry
+        poetry install
     - name: Lint with flake8
       run: |
         flake8 .
