enter poetry shell

--- a/.github/workflows/pythoncicd.yml
+++ b/.github/workflows/pythoncicd.yml
@@ -18,6 +18,7 @@ jobs:
         pip install --upgrade pip
         pip install poetry
         poetry install
+        poetry shell
     - name: Lint with flake8
       run: |
         flake8 .
