--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 python = ">=3.7.1,<4.0"
 ipython = "^7.19.0"
 pytest = "^6.2.2"
+numpy = "^1.20.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
