--- a/.github/workflows/python_code_checks.yml
+++ b/.github/workflows/python_code_checks.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install flake8 black pytest mypy
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         flake8 .
