add conditional codecov logic

--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -31,6 +31,7 @@ jobs:
         pytest --cov=./
     - name: Upload codecov
       uses: codecov/codecov-action@v1
+      if: secrets.CODECOV_TOKEN != null
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: true
