--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,28 @@
-black==20.*,>=20.8.0.b1
-flake8==3.*,>=3.8.4
-ipython==7.*,>=7.19.0
-mypy==0.*,>=0.800.0
-numpy==1.*,>=1.20.0
-pre-commit==2.*,>=2.10.0
-pytest==6.*,>=6.2.2
-pytest-cov==2.*,>=2.11.1
+appnope==0.1.2; sys_platform == "darwin" and python_version >= "3.7"
+atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
+attrs==20.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+backcall==0.2.0; python_version >= "3.7"
+colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0"
+decorator==4.4.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.2.0" and python_version >= "3.7"
+importlib-metadata==3.4.0; python_version < "3.8" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.4.0" and python_version >= "3.6" and python_version < "3.8")
+iniconfig==1.1.1; python_version >= "3.6"
+ipython-genutils==0.2.0; python_version >= "3.7"
+ipython==7.19.0; python_version >= "3.7"
+jedi==0.18.0; python_version >= "3.7"
+numpy==1.20.0; python_version >= "3.7"
+packaging==20.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+parso==0.8.1; python_version >= "3.7"
+pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.7"
+pickleshare==0.7.5; python_version >= "3.7"
+pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+prompt-toolkit==3.0.14; python_full_version >= "3.6.1" and python_version >= "3.7"
+ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.7"
+py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+pygments==2.7.4; python_version >= "3.7"
+pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+pytest==6.2.2; python_version >= "3.6"
+toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+traitlets==5.0.5; python_version >= "3.7"
+typing-extensions==3.7.4.3; python_version < "3.8" and python_version >= "3.6"
+wcwidth==0.2.5; python_full_version >= "3.6.1" and python_version >= "3.7"
+zipp==3.4.0; python_version < "3.8" and python_version >= "3.6"
