--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,17 +22,19 @@ repos:
       name: mypy
       entry: mypy
       types: [python]
-    - id: generate_requirements
-      name: generate requirements
+    - id: update_requirements
+      name: update requirements
       language: python
       language_version: python3.7
       entry: poetry export --without-hashes -f requirements.txt --output requirements.txt
       pass_filenames: false
-    - id: generate_dev_requirements
-      name: generate development requirements
+      stages: [commit]
+    - id: update_dev_requirements
+      name: update development requirements
       language: python
       language_version: python3.7
       entry: poetry export --dev --without-hashes -f requirements.txt --output dev_requirements.txt
       pass_filenames: false
+      stages: [commit]
 
   
