--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ mypy = "^0.800"
 pytest = "^6.2.2"
 pre-commit = "^2.10.0"
 pytest-cov = "^2.11.1"
+pytest-sugar = "^0.9.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
