--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = ">=3.7.1,<4.0"
 ipython = "^7.19.0"
 pytest = "^6.2.2"
 numpy = "^1.20.0"
+disjoint-set = "^0.7.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
