--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==20.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or pyth
 backcall==0.2.0; python_version >= "3.7"
 colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0"
 decorator==4.4.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.2.0" and python_version >= "3.7"
+disjoint-set==0.7.2; python_version >= "3.7" and python_version < "4.0"
 importlib-metadata==3.4.0; python_version < "3.8" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.4.0" and python_version >= "3.6" and python_version < "3.8")
 iniconfig==1.1.1; python_version >= "3.6"
 ipython-genutils==0.2.0; python_version >= "3.7"
